Fixed problems in UI alignment of list items and position of add button

--- a/styles/list.module.css
+++ b/styles/list.module.css
@@ -8,7 +8,7 @@
 .addBtn {
   width: 4.5rem;
   height: 4.5rem;
-  position: absolute;
+  position: fixed;
   bottom: calc(100vh/20);
   right: calc(100vw/20);
 }
